# aerlix-regulated-delivery-control-plane

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml  cosign.yml  docs.yml  sbom.yml  test.yml
api-reference/: index.html
app/: __init__.py  db.py  main.py
app/api/v1/: __init__.py  audit.py  components.py  controls.py  evidence.py  incidents.py  metrics.py  policies.py  releases.py  requirements.py  sbom.py  (+1 more)
app/cli/: main.py
app/core/: config.py
app/models/: __init__.py
app/schemas/: __init__.py
app/services/: audit_exporter.py  policy_engine.py  traceability.py
architecture/: index.html
audit-bundles/: index.html
data-model/: index.html
demo-walkthrough/: index.html
developer/contributing/: index.html
developer/security/: index.html
developer/testing/: index.html
docs/: api-reference.md  architecture.md  audit-bundles.md  data-model.md  demo-walkthrough.md  index.md  policy-engine.md  roadmap.md
docs/developer/: contributing.md  security.md  testing.md
docs/getting-started/: configuration.md  docker-compose.md  quickstart.md
docs/user-guides/: sbom.md  traceability.md
examples/: audit-bundle.json  controls.yaml  evidence.json  policy-rules.yaml  release-report.json  requirements.yaml  sbom.json
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
getting-started/configuration/: index.html
getting-started/docker-compose/: index.html
getting-started/quickstart/: index.html
k8s/base/: api-deployment.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  redis-deployment.yaml
migrations/: env.py
migrations/versions/: 1585041fde5a_initial_schema.py
policy-engine/: index.html
roadmap/: index.html
sample_data/: __init__.py  seed_db.py
search/: search_index.json
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api_crud.py  test_policy_engine.py  test_requirement_completion.py  test_traceability.py
user-guides/sbom/: index.html
user-guides/traceability/: index.html
(+19 files in other folders)
