[tool.poetry]
name = "aerlix-regulated-delivery-control-plane"
version = "0.1.0"
description = "Compliance-native software delivery control plane for regulated environments"
authors = ["Aerlix Consulting <engineering@aerlix.io>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/AerlixConsulting/aerlix-regulated-delivery-control-plane"
repository = "https://github.com/AerlixConsulting/aerlix-regulated-delivery-control-plane"
keywords = ["compliance", "fedramp", "nist", "devsecops", "regulated-delivery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
psycopg2-binary = "^2.9.9"
networkx = "^3.3"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
pyyaml = "^6.0.1"
python-multipart = "^0.0.22"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.4"
jinja2 = "^3.1.4"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^5.0.0"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
factory-boy = "^3.3.0"
faker = "^25.8.0"

[tool.poetry.scripts]
aerlix = "app.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "UP042", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["app/cli/*", "*/migrations/*"]
